# grpc-rust-demo

./: .gitignore  Cargo.toml  README.md  TESTING.md  docker-compose.yml
proto/: random.proto
random-generator/: Cargo.toml  Dockerfile  build.rs
random-generator/src/: main.rs
rest-gateway/: Cargo.toml  Dockerfile
rest-gateway/src/: main.rs
