[workspace]
members = [
    "random-generator",
    "rest-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rust Demo"]
description = "A demo of gRPC and REST microservices in Rust"

[workspace.dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros", "fs"] }
rand = "0.8.5"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
axum = "0.7.2"
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.75" 